user add/update form component localized completely.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -37,15 +37,15 @@
     "attachment": "پیوست",
     "download": "دانلود",
     "preview": "نمایش",
-    "fullname": "نام و نام خانوادگی",
+    "fullName": "نام و نام خانوادگی",
     "username": "نام کاربری",
     "password": "رمز عبور",
     "confirmPassword": "تایید رمز عبور",
     "detail": "جزئیات",
     "edit": "ویرایش",
-    "isactive": "فعال",
-    "startdate": "تاریخ شروع",
-    "enddate": "تاریخ پایان",
+    "isActive": "فعال",
+    "startDate": "تاریخ شروع",
+    "endDate": "تاریخ پایان",
     "address": "آدرس",
     "website": "وب سایت",
     "tel": "تلفن",
@@ -53,12 +53,12 @@
     "fax": "فکس",
     "property": "مشخصه",
     "amount": "مقدار",
-    "selectrow": "انتخاب",
-    "lastname": "نام خانوادگی",
-    "firstname": "نام",
+    "selectRow": "انتخاب",
+    "lastName": "نام خانوادگی",
+    "firstName": "نام",
     "image": "تصویر",
     "email": "ایمیل",
-    "phonenumber": "تلفن همراه",
+    "phoneNumber": "تلفن همراه",
     "select": "انتخاب",
     "hour": "ساعت",
     "minute": "دقیقه",
@@ -85,7 +85,7 @@
     "delete": "حذف",
     "hotkeys": "کلیدهای میانبر",
     "toggleActive": "فعال/غیرفعال",
-    "formInfoIsNotValid": "اطلاعات فرم معتبر نمی باشد",
+    "formDataIsInvalid": "اطلاعات فرم معتبر نمی باشد",
     "dateDidNotEnterCorrectly": "تاریخ به درستی وارد نشده است",
     "noFileSelected": "فایل انتخاب نشده است",
     "anyDataDidNotEnter": "هیچ اطلاعاتی وارد نشده است",
