--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -96,5 +96,23 @@
     "noDataExist": "داده ای وجود ندارد",
     "doNotHaveAccessToPage": "شما دسترسی به این صفحه/پنجره را ندارید",
     "doNotHaveAccessToThisActionOrSection": "دسترسی(انجام) به این قسمت(عملیات) را ندارید",
-    "minLenghtForThisFieldIsN": "طول این فیلد باید حداقل {{n}} کاراکتر باشد"
+    "usernameIsRequired": "وارد کردن 'نام کاربری' ضروری است",
+    "firstNameIsRequired": "وارد کردن 'نام' ضروری است",
+    "lastNameIsRequired": "وارد کردن 'نام خانوادگی' ضروری است",
+    "emailIsRequired": "وارد کردن 'ایمیل' ضروری است",
+    "passwordIsRequired": "وارد کردن 'کلمه عبور' ضروری است",
+    "confirmPasswordIsRequired": "وارد کردن 'تایید کلمه عبور' ضروری است",
+    "minLenghtForUsernameIsN": "طول 'نام کاربری' باید حداقل {{n}} کاراکتر باشد",
+    "minLenghtForFirstNameIsN": "طول 'نام' باید حداقل {{n}} کاراکتر باشد",
+    "minLenghtForLastNameIsN": "طول 'نام خانوادگی' باید حداقل {{n}} کاراکتر باشد",
+    "minLenghtForPasswordIsN": "طول 'کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
+    "minLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
+    "maxLenghtForUsernameIsN": "طول نام کاربری باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForFirstNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForlastNameIsN": "طول 'نام خانوادگی' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForPasswordIsN": "طول 'کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
+    "firstNameIsNotEnteredCorrectly": "'نام' به درستی وارد نشده است",
+    "lastNameIsNotEnteredCorrectly": "'نام خانوادگی' به درستی وارد نشده است",
+    "emailIsNotEnteredCorrectly": "'ایمیل' به درستی وارد نشده است"
 }
