some methods of roleValidation and permissionValidation updated.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -97,6 +97,7 @@
     "doNotHaveAccessToPage": "شما دسترسی به این صفحه/پنجره را ندارید",
     "doNotHaveAccessToThisActionOrSection": "دسترسی(انجام) به این قسمت(عملیات) را ندارید",
     "usernameIsRequired": "وارد کردن 'نام کاربری' ضروری است",
+    "nameIsRequired": "وارد کردن 'نام' ضروری است",
     "firstNameIsRequired": "وارد کردن 'نام' ضروری است",
     "lastNameIsRequired": "وارد کردن 'نام خانوادگی' ضروری است",
     "emailIsRequired": "وارد کردن 'ایمیل' ضروری است",
@@ -112,6 +113,8 @@
     "minLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
     "maxLenghtForUsernameIsN": "طول نام کاربری باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForFirstNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForDescriptionIsN": "طول 'توضیحات' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForlastNameIsN": "طول 'نام خانوادگی' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForPasswordIsN": "طول 'کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
