--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -98,6 +98,10 @@
     "doNotHaveAccessToThisActionOrSection": "دسترسی(انجام) به این قسمت(عملیات) را ندارید",
     "usernameIsRequired": "وارد کردن 'نام کاربری' ضروری است",
     "nameIsRequired": "وارد کردن 'نام' ضروری است",
+    "pageIsRequired": "وارد کردن 'صفحه' ضروری است",
+    "permissionIsRequired": "وارد کردن 'دسترسی' ضروری است",
+    "roleIsRequired": "وارد کردن 'نقش' ضروری است",
+    "pagePermissionIsRequired": "وارد کردن 'دسترسی نقش' ضروری است",
     "firstNameIsRequired": "وارد کردن 'نام' ضروری است",
     "lastNameIsRequired": "وارد کردن 'نام خانوادگی' ضروری است",
     "emailIsRequired": "وارد کردن 'ایمیل' ضروری است",
