--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -125,6 +125,7 @@
     "firstNameIsNotEnteredCorrectly": "'نام' به درستی وارد نشده است",
     "lastNameIsNotEnteredCorrectly": "'نام خانوادگی' به درستی وارد نشده است",
     "emailIsNotEnteredCorrectly": "'ایمیل' به درستی وارد نشده است",
+    "priorityIsNotEnteredCorrectly": "'الویت' به درستی وارد نشده است",
     "ThisLoginTypeIsNotPossible": "این نوع ورود امکان پذیر نمی باشد",
     "userIsNotActive": "کاربر فعال نمی باشد",
     "usernameOrPasswordIsIncorect": "نام کاربری یا کلمه عبور نادرست است",
