type property added to permission model, service, repository.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -110,6 +110,7 @@
     "confirmPasswordIsRequired": "وارد کردن 'تایید کلمه عبور' ضروری است",
     "currentPasswordIsRequired": "'کلمه عبور فعلی' ضروری است",
     "idIsRequired": "'شناسه' ضروری است",
+    "typeIsRequired": "'نوع' ضروری است",
     "minLenghtForUsernameIsN": "طول 'نام کاربری' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForFirstNameIsN": "طول 'نام' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForLastNameIsN": "طول 'نام خانوادگی' باید حداقل {{n}} کاراکتر باشد",
@@ -126,6 +127,7 @@
     "lastNameIsNotEnteredCorrectly": "'نام خانوادگی' به درستی وارد نشده است",
     "emailIsNotEnteredCorrectly": "'ایمیل' به درستی وارد نشده است",
     "priorityIsNotEnteredCorrectly": "'الویت' به درستی وارد نشده است",
+    "typeIsNotEnteredCorrectly": "'نوع' به درستی وارد نشده است",
     "ThisLoginTypeIsNotPossible": "این نوع ورود امکان پذیر نمی باشد",
     "userIsNotActive": "کاربر فعال نمی باشد",
     "usernameOrPasswordIsIncorect": "نام کاربری یا کلمه عبور نادرست است",
