--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -101,6 +101,7 @@
     "pageIsRequired": "وارد کردن 'صفحه' ضروری است",
     "permissionIsRequired": "وارد کردن 'دسترسی' ضروری است",
     "roleIsRequired": "وارد کردن 'نقش' ضروری است",
+    "userIsRequired": "وارد کردن 'کاربر' ضروری است",
     "pagePermissionIsRequired": "وارد کردن 'دسترسی نقش' ضروری است",
     "firstNameIsRequired": "وارد کردن 'نام' ضروری است",
     "lastNameIsRequired": "وارد کردن 'نام خانوادگی' ضروری است",
