role form component added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -3,6 +3,7 @@
     "Content Management": "مدیریت محتوا",
     "Security": "امنیت",
     "Users": "کاربران",
+    "roles": "نقش ها",
     "User Profile": "پروفایل کاربر",
     "filedIsRequired": "وارد کردن این فیلد ضروری است",
     "success": "موفق",
@@ -40,6 +41,7 @@
     "fullName": "نام و نام خانوادگی",
     "username": "نام کاربری",
     "user": "کاربر",
+    "role": "نقش",
     "password": "رمز عبور",
     "confirmPassword": "تایید رمز عبور",
     "detail": "جزئیات",
