--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -3,7 +3,8 @@
     "Content Management": "مدیریت محتوا",
     "Security": "امنیت",
     "Users": "کاربران",
-    "roles": "نقش ها",
+    "Roles": "نقش ها",
+    "Permissions": "دسترسی ها",
     "User Profile": "پروفایل کاربر",
     "filedIsRequired": "وارد کردن این فیلد ضروری است",
     "success": "موفق",
@@ -42,6 +43,7 @@
     "username": "نام کاربری",
     "user": "کاربر",
     "role": "نقش",
+    "permission": "دسترسی",
     "password": "رمز عبور",
     "confirmPassword": "تایید رمز عبور",
     "detail": "جزئیات",
@@ -82,6 +84,7 @@
     "pageSize": "اندازه",
     "new": "جدید",
     "save": "ذخیره",
+    "add": "درج",
     "update": "بروزرسانی",
     "clear": "پاک کردن",
     "reset": "بازنشانی",
@@ -98,5 +101,14 @@
     "noDataExist": "داده ای وجود ندارد",
     "doNotHaveAccessToPage": "شما دسترسی به این صفحه/پنجره را ندارید",
     "doNotHaveAccessToThisActionOrSection": "دسترسی(انجام) به این قسمت(عملیات) را ندارید",
-    "minLenghtForThisFieldIsN": "طول این فیلد باید حداقل {{n}} کاراکتر باشد"
+    "minLenghtForThisFieldIsN": "طول این فیلد باید حداقل {{n}} کاراکتر باشد",
+    "view": "نمایش",
+    "publish": "انتشار",
+    "unpublish": "عدم انتشار",
+    "reject": "رد",
+    "export": "برون ریزی",
+    "import": "درون ریزی",
+    "viewComment": "نمایش نظر",
+    "addComment": "افزودن نظر",
+    "replyComment": "پاسخ به نظر"
 }
