userRole forms and index components updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -6,6 +6,7 @@
     "Roles": "نقش ها",
     "Permissions": "دسترسی ها",
     "User Profile": "پروفایل کاربر",
+    "User In Roles": "نقش های کاربر",
     "filedIsRequired": "وارد کردن این فیلد ضروری است",
     "success": "موفق",
     "error": "خطا",
