--- a/client/public/locales/fa/security.json
+++ b/client/public/locales/fa/security.json
@@ -2,5 +2,6 @@
     "login": "ورود",
     "signUp": "ثبت نام",
     "confirmPasswordDoNotMatch": "کلمه عبور و تایید آن تطابق ندارد",   
-    "isCreatedByExternalAccount": "ایجاد شده با اکانت خارجی"   
+    "isCreatedByExternalAccount": "ایجاد شده با اکانت خارجی",
+    "userInRole": "نقش کاربر"
 }
