type to page model added. page client for based the changes updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -10,6 +10,8 @@
     "User In Roles": "نقش های کاربر",
     "Page Permissions": "دسترسی های صفحه",
     "Role Page Permissions": "دسترسی های صفحه نقش",
+    "home": "خانه",
+    "security": "امنیت",
     "filedIsRequired": "وارد کردن این فیلد ضروری است",
     "success": "موفق",
     "error": "خطا",
@@ -119,5 +121,20 @@
     "addComment": "افزودن نظر",
     "replyComment": "پاسخ به نظر",
     "parent": "والد",
-    "iconClass": "کلاس آیکون"
+    "iconClass": "کلاس آیکون",
+    "userProfile": "پروفایل کاربر",
+    "userRole": "نقش کاربر",
+    "pagePermission": "دسترسی صفحه",
+    "rolePagePermission": "دسترسی صفحه نقش",
+    "contentManagement": "مدیریت محتوا",
+    "postCategory": "دسته بندی نوشته",
+    "post": "نوشته",
+    "link": "لینک",
+    "slider": "اسلایدر",
+    "menu": "فهرست",
+    "galleryCategory": "طبقه بندی گالری",
+    "gallery": "گالری",
+    "brand": "برند",
+    "event": "رخداد",
+    "eventRegister": "ثبت رخداد"
 }
