userProfile load and usage of page permission updated. some missing localization items added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -12,6 +12,7 @@
     "Role Page Permissions": "دسترسی های صفحه نقش",
     "home": "خانه",
     "security": "امنیت",
+    "account": "حساب کاربری",
     "filedIsRequired": "وارد کردن این فیلد ضروری است",
     "success": "موفق",
     "error": "خطا",
@@ -93,6 +94,7 @@
     "new": "جدید",
     "save": "ذخیره",
     "add": "درج",
+    "upload": "بارگزاری",
     "update": "بروزرسانی",
     "clear": "پاک کردن",
     "reset": "بازنشانی",
