some enteries added to translation file.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -112,6 +112,7 @@
     "currentPasswordIsRequired": "'کلمه عبور فعلی' ضروری است",
     "idIsRequired": "'شناسه' ضروری است",
     "typeIsRequired": "'نوع' ضروری است",
+    "priorityIsRequired": "'الویت' ضروری است",
     "minLenghtForUsernameIsN": "طول 'نام کاربری' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForFirstNameIsN": "طول 'نام' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForLastNameIsN": "طول 'نام خانوادگی' باید حداقل {{n}} کاراکتر باشد",
@@ -123,7 +124,9 @@
     "maxLenghtForDescriptionIsN": "طول 'توضیحات' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForlastNameIsN": "طول 'نام خانوادگی' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForPasswordIsN": "طول 'کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
-    "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
+    "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForSlugUrlIsN": "طول 'آدرس slug' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForAllowedFileExtensionIsN": "طول 'فرمت های فایل قابل قبول' باید حداکثر {{n}} کاراکتر باشد",
     "firstNameIsNotEnteredCorrectly": "'نام' به درستی وارد نشده است",
     "lastNameIsNotEnteredCorrectly": "'نام خانوادگی' به درستی وارد نشده است",
     "emailIsNotEnteredCorrectly": "'ایمیل' به درستی وارد نشده است",
