some translation entries added.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -120,8 +120,10 @@
     "minLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداقل {{n}} کاراکتر باشد",
     "maxLenghtForUsernameIsN": "طول نام کاربری باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForFirstNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForTitleIsN": "طول 'عنوان' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForDescriptionIsN": "طول 'توضیحات' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForShortDescriptionIsN": "طول 'شرح کوتاه' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForlastNameIsN": "طول 'نام خانوادگی' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForPasswordIsN": "طول 'کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
