some entries added to translation.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -115,6 +115,10 @@
     "priorityIsRequired": "'الویت' ضروری است",
     "relatedPostIdIsRequired": "'پست مرتبط' ضروری است",
     "postIdIsRequired": "'پست' ضروری است",
+    "postCategoryIdIsRequired": "'دسته بندی نوشته' ضروری است",
+    "sliderIdIsRequired": "'اسلایدر' ضروری است",
+    "galleryIdIsRequired": "'گالری' ضروری است",
+    "galleryCategoryIdIsRequired": "'دسته بندی گالری' ضروری است",
     "minLenghtForUsernameIsN": "طول 'نام کاربری' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForFirstNameIsN": "طول 'نام' باید حداقل {{n}} کاراکتر باشد",
     "minLenghtForLastNameIsN": "طول 'نام خانوادگی' باید حداقل {{n}} کاراکتر باشد",
@@ -131,6 +135,8 @@
     "maxLenghtForConfirmPasswordIsN": "طول 'تایید کلمه عبور' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForSlugUrlIsN": "طول 'آدرس slug' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForAllowedFileExtensionIsN": "طول 'فرمت های فایل قابل قبول' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForFileSavePathIsN": "طول 'آدرس فایل' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForFileExtensionIsN": "طول 'فرمت فایل' باید حداکثر {{n}} کاراکتر باشد",
     "firstNameIsNotEnteredCorrectly": "'نام' به درستی وارد نشده است",
     "lastNameIsNotEnteredCorrectly": "'نام خانوادگی' به درستی وارد نشده است",
     "emailIsNotEnteredCorrectly": "'ایمیل' به درستی وارد نشده است",
