some enteries adde to translation and appConstant.

--- a/server/locales/fa/translation.json
+++ b/server/locales/fa/translation.json
@@ -127,6 +127,12 @@
     "maxLenghtForUsernameIsN": "طول نام کاربری باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForFirstNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForTitleIsN": "طول 'عنوان' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForCommentIsN": "طول 'نظر' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForEmailIsN": "طول 'ایمیل' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForUrlIsN": "طول 'ایمیل' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForFullNameIsN": "طول 'آدرس' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForWebsiteIsN": "طول 'وب سایت' باید حداکثر {{n}} کاراکتر باشد",
+    "maxLenghtForIPIsN": "طول 'IP' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForNameIsN": "طول 'نام' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForDescriptionIsN": "طول 'توضیحات' باید حداکثر {{n}} کاراکتر باشد",
     "maxLenghtForShortDescriptionIsN": "طول 'شرح کوتاه' باید حداکثر {{n}} کاراکتر باشد",
