pageEnum file renamed to pageTypeEnum.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -131,6 +131,7 @@
     "contentManagement": "مدیریت محتوا",
     "postCategory": "دسته بندی نوشته",
     "post": "نوشته",
+    "tag": "برچسب",
     "link": "لینک",
     "slider": "اسلایدر",
     "menu": "فهرست",
