some enteris for galleryCategory form added to commonMessages and common.json file.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -10,6 +10,8 @@
     "User In Roles": "نقش های کاربر",
     "Page Permissions": "دسترسی های صفحه",
     "Role Page Permissions": "دسترسی های صفحه نقش",
+    "Post Categories": "دسته بندی نوشته",
+    "Gallery Categories": "دسته بندی گالری",
     "Tags": "برچسب ها",
     "home": "خانه",
     "security": "امنیت",
