slider index and form components updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -145,5 +145,8 @@
     "event": "رخداد",
     "eventRegister": "ثبت رخداد",
     "locale": "کد زبان",
-    "caroucel": "کروسل"
+    "caroucel": "کروسل",
+    "params": "پارامترها",
+    "sectionName": "نام قسمت",
+    "allowedFileExtension": "فرمت های فایل مجاز"
 }
