sliderItem component updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -155,5 +155,6 @@
     "file": "فایل",
     "fileExtension": "فرمت فایل",
     "linkUrl": "آدرس لینک",
-    "linkTarget": "نحوه باز شدن لینک"
+    "linkTarget": "نحوه باز شدن لینک",
+    "uploadAFile": "بارگذاری فایل"
 }
