sliderItem and slider form components update sequence updated.

--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -14,5 +14,7 @@
     "print": "Print",
     "viewComment": "View Comment",
     "addComment": "Add Comment",
-    "replyComment": "Reply Comment"
+    "replyComment": "Reply Comment",
+    "_self": "Open In The Same Window",
+    "_blank": "Open In New Window"
 }
