some entries related to slider componets added into common translation file.

--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -16,5 +16,7 @@
     "addComment": "Add Comment",
     "replyComment": "Reply Comment",
     "_self": "Open In The Same Window",
-    "_blank": "Open In New Window"
+    "_blank": "Open In New Window",
+    "persian": "Persian",
+    "english": "English"
 }
