--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -160,5 +160,7 @@
     "openInTheSameWindow": "باز شدن در پنجره فعلی",
     "openInNewWindow": "باز شدن در پنجره جدید",
     "_self": "باز شدن در پنجره فعلی",
-    "_blank": "باز شدن در پنجره جدید"
+    "_blank": "باز شدن در پنجره جدید",
+    "persian": "فارسی",
+    "english": "انگلیسی"
 }
