localizationService added to client-side services.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -162,5 +162,7 @@
     "_self": "باز شدن در پنجره فعلی",
     "_blank": "باز شدن در پنجره جدید",
     "persian": "فارسی",
-    "english": "انگلیسی"
+    "english": "انگلیسی",
+    "createdAt": "تاریخ ایجاد",
+    "updatedAt": "تاریخ ویرایش"
 }
