some required entry for new gallery entity in client side localization file and menu file added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -164,5 +164,7 @@
     "persian": "فارسی",
     "english": "انگلیسی",
     "createdAt": "تاریخ ایجاد",
-    "updatedAt": "تاریخ ویرایش"
+    "updatedAt": "تاریخ ویرایش",
+    "video": "ویدئو",
+    "audio": "صوت"
 }
