some enteries related to menuService added into common transalation file.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -147,7 +147,7 @@
     "slider": "اسلایدر",
     "sliderItem": "آیتم های اسلایدر",
     "menu": "فهرست",
-    "galleryCategory": "طبقه بندی گالری",
+    "galleryCategory": "دسته بندی گالری",
     "gallery": "گالری",
     "brand": "برند",
     "event": "رخداد",
@@ -160,8 +160,11 @@
     "file": "فایل",
     "fileExtension": "فرمت فایل",
     "linkUrl": "آدرس لینک",
+    "url": "آدرس اینترنتی",
     "linkTarget": "نحوه باز شدن لینک",
     "uploadAFile": "بارگذاری فایل",
+    "product": "محصول",
+    "productCategory": "دسته بندی محصول",
     "openInTheSameWindow": "باز شدن در پنجره فعلی",
     "openInNewWindow": "باز شدن در پنجره جدید",
     "_self": "باز شدن در پنجره فعلی",
