some new enteries related to localization added into translation files.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -178,6 +178,8 @@
    "galleryFile": "فایل های گالری",
    "postFile": "فایل های نوشته",
    "postImage": "تصویر های نوشته",
+   "postTag": "برچسب های نوشته",
+   "relatedPost": "نوشته های مرتبط",
    "menuItem": "آیتم های نوشته",
    "iconCssClass": "کلاس css آیکون",
    "slugUrl": "آدرس SEO",
