featureItem and featureSection styles updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -205,5 +205,5 @@
    "lastPostList": "آخرین نوشته ها",
    "readMore": "مشاهده بیشتر ...",
    "feature": "عنوان ویژگی",
-   "featureDescription": "توضیخات ویژگی باید در این قسمت نوشته شود",
+   "featureDescription": "توضیحات ویژگی باید در این قسمت نوشته شود"
 }
